Update privacy policy with current date and contact email

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Política de Privacidade – Capy Blocks</h1>
-    <p><strong>Última atualização:</strong> [coloque a data aqui]</p>
+    <p><strong>Última atualização:</strong> 07/12/2025</p>
 
     <h2>1. Informações que Coletamos</h2>
     <p>O Capy Blocks não coleta, armazena ou solicita dados pessoais como nome, e-mail, telefone ou localização.</p>
@@ -44,7 +44,7 @@
     <p>Esta Política de Privacidade pode ser atualizada. A versão mais recente estará sempre disponível neste endereço.</p>
 
     <h2>8. Contato</h2>
-    <p>Email: [seu email]<br>Site: [seu site]</p>
+    <p>Email: capyblocks@gmail.com<br></p>
 
 </body>
 </html>
